Second test (and bugfix) for computeRoars
The problem was about the read length in the multiple samples situations (only the first sample was considered and this is not ok. Is the mean ok?)

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+MAybe check step is not so nice to the user...maybe we should allow repeating a step already done 
+deleting all "future data"...this problem exists because I added the strandness parameter to countPrePost :/
+
 The setClass function returns a special function called a constructor, that can
 be used to create an instance of the class.
 slots and not representation (deprecated)
