--- a/vignettes/roar.Rnw
+++ b/vignettes/roar.Rnw
@@ -11,10 +11,28 @@
 %\SweaveOpts{concordance=TRUE}
 
 \maketitle
-LoremIpsus!
+
+Check the man pages and the roarWrapper script to get help about this package usage.
 
 <<>>= 
-ex <- c(1,2)
+   library(roar)
+        gene_id <- c("A_PRE", "A_POST", "B_PRE", "B_POST")
+   features <- GRanges(
+      seqnames = Rle(c("chr1", "chr1", "chr2", "chr2")),
+      strand = strand(rep("+", length(gene_id))),
+      ranges = IRanges(
+         start=c(1000, 2000, 3000, 3600),
+         width=c(1000, 900, 600, 300)),
+      DataFrame(gene_id)
+   )
+   rd1 <- GappedAlignments("a", seqnames = Rle("chr1"), pos = as.integer(1000), cigar = "300M", strand = strand("+"))
+   rd2 <- GappedAlignments("a", seqnames = Rle("chr1"), pos = as.integer(2000), cigar = "300M", strand = strand("+"))
+   rd3 <- GappedAlignments("a", seqnames = Rle("chr2"), pos = as.integer(3000), cigar = "300M", strand = strand("+"))
+   rds <- RoarDataset(list(c(rd1,rd2)), list(rd3), features)
+   rds <- countPrePost(rds, FALSE)
+   rds <- computeRoars(rds)
+   rds <- computePvals(rds)
+   df <- filteringInfoResults(rds)
 @
 
 
